# rust-in-pyshiny

./: Cargo.toml  README.md  app.py
src/: lib.rs
