[package]
name = "rust-in-pyshiny"
version = "0.1.0"
edition = "2021"
authors = ["Tymoteusz Makowski <tymek.makowski@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyshiny_rust_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
